fix: prevent text cutoff

--- a/sites/public/pages/index.module.scss
+++ b/sites/public/pages/index.module.scss
@@ -57,7 +57,7 @@
   }
   img {
     object-fit: cover;
-    border-radius: 16px 16px 0 0;
+    border-radius: 24px 24px 0 0;
     height: 100%;
     width: 100%;
     @apply pb-2;
@@ -72,13 +72,13 @@
   justify-content: center;
   font-size: 1.3rem;
   font-weight: 700;
-  line-height: 1rem;
+  line-height: 1.3rem;
   max-width: 278px;
   overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   @apply text-primary-dark;
-  @apply pb-8;
+  @apply pb-4;
   @screen lg {
     @apply pb-0;
   }
