--- a/sites/public/styles/listings.scss
+++ b/sites/public/styles/listings.scss
@@ -134,6 +134,10 @@
 
   .listings-row_figure {
     width: 100%;
+    border-radius: 24px 24px 0 0;
     padding: 0;
+  }
+  .image-card img {
+    border-radius: 24px 24px 0 0;
   }
 }
